--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "example-project",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "devDependencies": {
     "grunt": "^0.4.2",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.5.3",
     "grunt-sass": "^0.11.0",
-    "grunt-cli": "^0.1.13",
+    "grunt-cli": "^0.1.13"
   }
 }
