--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "Formikation",
-  "version": "0.1.0",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/vortizhe/formikation.git"
+  "version": "0.2.0",
+  "description": "A simple form beautifier",
+  "keywords": ["jquery-plugin", "forms", "custom form", "checkbox", "radiobutton", "select", "file"],
+  "author": {
+    "name": "Victor Ortiz",
+    "email": "kespers@gmail.com",
+    "url": "https://github.com/vortizhe"
+  },
+  "contributors": {
+    "name": "Carlos Cabo",
+    "email": "carloscabo@gmail.com",
+    "url": "https://github.com/carloscabo"
+  },
+  "repository": "vortizhe/formikation",
+  "license": "MIT",
+  "scripts": {
+    "test": "gulp"
   },
   "devDependencies": {
-    "grunt": "^0.4.2",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-sass": "^0.11.0",
-    "grunt-cli": "^0.1.13"
+    "gulp": "~3.8.11",
+    "gulp-util": "~3.0.4",
+    "gulp-plumber": "~0.6.6",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~1.1.0",
+    "gulp-sass": "~1.3.3",
+    "gulp-autoprefixer": "~2.1.0",
+    "gulp-sourcemaps": "~1.3.0",
+    "gulp-livereload": "~3.8.0"
   }
 }
