Config sitemap plugin

--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,14 @@ fenced_code_blocks: true
 redcarpet:
  extensions: ["fenced_code_blocks", "tables"]
 github: [Repository metadata]
+
+gems:
+  - jekyll-sitemap
+
+# Plugins
+sitemap:
+  file: "/sitemap.xml"
+  exclude:
+    - "/feed.xml"
+  change_frequency_name: "change_frequency"
+  priority_name: "priority"
