--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "Formikation is a simple jQuery plugin to beautify form inputs with some css.",
   "keywords": ["jquery-plugin", "forms", "custom form", "checkbox", "radiobutton", "select", "file"],
+  "homepage": "https://github.com/vortizhe/formikation",
   "author": {
     "name": "Victor Ortiz",
     "email": "kespers@gmail.com",
@@ -13,20 +14,38 @@
     "email": "carloscabo@gmail.com",
     "url": "https://github.com/carloscabo"
   },
-  "repository": "vortizhe/formikation",
-  "license": "MIT",
-  "scripts": {
-    "test": "gulp"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vortizhe/formikation.git"
+  },
+  "license": ["MIT"],
+  "files": [
+    "dist",
+    "src",
+    "*.json",
+    "*.js",
+    ".css"
+  ],
+  "engines": {
+    "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "gulp": "~3.8.11",
-    "gulp-util": "~3.0.4",
-    "gulp-plumber": "~0.6.6",
-    "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~1.1.0",
-    "gulp-sass": "~1.3.3",
-    "gulp-autoprefixer": "~2.1.0",
-    "gulp-sourcemaps": "~1.3.0",
-    "gulp-livereload": "~3.8.0"
-  }
+    "gulp": "~3.9.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-header": "~1.7.1",
+    "gulp-jshint": "~2.0.0",
+    "gulp-open": "^1.0.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-sass": "~2.1.0",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "~1.6.0",
+    "gulp-uglify": "~1.5.1",
+    "jshint": "~2.8.0",
+    "jshint-stylish": "~2.1.0"
+  },
+  "scripts": {
+    "test": "gulp dist"
+  },
+  "main": "dist/jquery.formikation.js",
+  "style": "dist/mqbe.css"
 }
