--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,11 @@ baseurl: "/formikation"
 url: "http://vortizhe.me"
 
 # Build settings
-markdown: redcarpet
-highlighter: pygments
-fenced_code_blocks: true
-redcarpet:
- extensions: ["fenced_code_blocks", "tables"]
 github: [Repository metadata]
+
+kramdown:
+  hard_wrap: false
+  input: GFM
 
 gems:
   - jekyll-sitemap
