--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ node_modules
 bower_components
 _site
 .sass-cache
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
