--- a/package.json
+++ b/package.json
@@ -51,8 +51,14 @@
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "~1.6.0",
     "gulp-uglify": "~1.5.1",
+    "jasmine-core": "^2.4.1",
     "jshint": "~2.8.0",
-    "jshint-stylish": "~2.1.0"
+    "jshint-stylish": "~2.1.0",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-ios-simulator-launcher": "0.0.4",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-jquery": "^0.1.1"
   },
   "scripts": {
     "test": "gulp dist"
