Use phanthomjs instead chrome or safari ios

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-header": "~1.7.1",
     "gulp-include": "^2.3.0",
+    "gulp-jasmine": "^2.4.0",
     "gulp-jshint": "~2.0.0",
     "gulp-open": "^1.0.0",
     "gulp-rename": "~1.2.2",
@@ -58,7 +59,10 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-ios-simulator-launcher": "0.0.4",
     "karma-jasmine": "^1.0.2",
-    "karma-jasmine-jquery": "^0.1.1"
+    "karma-jasmine-html-reporter": "^0.2.1",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "phantomjs": "^2.1.7"
   },
   "scripts": {
     "test": "gulp dist"
